[project]
name = "eventflow"
version = "0.1.0"
description = "Reproducible event data pipeline"
readme = "README.md"
authors = [
    { name = "russluber", email = "russelhluber@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.67.1",
    "marimo>=0.23.6",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
]

[project.scripts]
eventflow = "eventflow:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
